name:                biegunka-svn
version:             0.1.0
synopsis:            SVN support for Biegunka
description:
  See README.markdown
homepage:            https://github.com/biegunka/biegunka-svn
license:             BSD2
license-file:        LICENSE
author:              Matvey Aksenov
maintainer:          matvey.aksenov@gmail.com
copyright:           Matvey Aksenov 2015
category:            Network
build-type:          Simple
cabal-version:       >= 1.10
extra-source-files:
  README.markdown

source-repository head
  type: git
  location: https://github.com/biegunka/biegunka-svn

library
  default-language:
    Haskell2010
  build-depends:
      base         >= 4.8 && < 5
    , biegunka
    , directory
    , lens
    , process
    , transformers >= 0.4
  hs-source-dirs:
    src
  exposed-modules:
    Control.Biegunka.Source.Svn
    Control.Biegunka.Source.Svn.Internal
  ghc-options:
    -Wall
    -Werror

test-suite spec
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  build-depends:
      base                    >= 4.8 && < 5
    , biegunka-svn
    , directory
    , filepath
    , hspec
    , hspec-expectations-lens
    , lens
    , process
    , temporary
    , transformers
  hs-source-dirs:
    test
  main-is:
    Spec.hs
  other-modules:
    Control.Biegunka.Source.SvnSpec
    SpecHelper
  ghc-options:
    -Wall
    -Werror
